[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Akagi201 <akagi201@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/longcipher/hpx"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

[workspace.dependencies]
# local crates
fastwebsockets = { path = "crates/fastwebsockets", package = "hpx-fastwebsockets", version = "0.1.0" }
hpx = { path = "crates/hpx", version = "0.1.0" }
hpx-util = { path = "crates/hpx-util", version = "0.1.0" }

# external crates
ahash = "0.8.12"
assert2 = "0.3.4"
async-trait = "0.1.80"
axum = "0.8.1"
axum-core = "0.5.0"
base64 = "0.22.1"
boring = { git = "https://github.com/cloudflare/boring.git", rev = "456836aea1f7319b9e78a1c8a1489d941de36573", version = "4.19.0" }
brotli = "8.0.2"
bytes = "1.11.0"
cookie = "0.18.1"
criterion = "0.8.1"
encoding_rs = "0.8.35"
eyre = "0.6.12"
flate2 = "1.1.5"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
hickory-resolver = "0.25.2"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
http2 = "0.5.10"
httparse = "1.10.1"
hyper = "1.8.1"
hyper-util = "0.1.19"
ipnet = "2.11.0"
libc = "0.2.178"
mime = "0.3.17"
mime_guess = "2.0.5"
percent-encoding = "2.3.2"
pin-project = "1.1.10"
pin-project-lite = "0.2.16"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.13.2"
schnellru = "0.2.4"
serde = "1.0.228"
serde_json = "1.0.148"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
simdutf8 = "0.1.5"
smallvec = "1.15.1"
socket2 = "0.6.1"
strum = "0.27.2"
strum_macros = "0.27.2"
sync_wrapper = "1.0.2"
system-configuration = "0.7.0"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-boring = { git = "https://github.com/cloudflare/boring.git", rev = "456836aea1f7319b9e78a1c8a1489d941de36573", version = "4.19.0" }
tokio-rustls = "0.26"
tokio-socks = "0.5.2"
tokio-test = "0.4.4"
tokio-util = "0.7.17"
tower = "0.5.2"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
trybuild = "1.0.80"
typed-builder = "0.23.2"
url = "2.5.7"
utf-8 = "0.7.6"
want = "0.3.1"
webpki-root-certs = "1.0.4"
webpki-roots = "1.0.4"
windows-registry = "0.6.1"
zstd = "0.13.3"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
