[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "1.4.0"
edition = "2024"
authors = ["Akagi201 <akagi201@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/longcipher/hpx"

[workspace.metadata.cargo-machete]
ignored = ["futures-core"]

# Enable pedantic lints for stricter code quality
# Priority -1 so individual lint settings override
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Pedantic overrides - these are too noisy or don't fit this codebase
missing_errors_doc = "allow"        # Requires extensive documentation work
missing_panics_doc = "allow"        # Requires extensive documentation work
must_use_candidate = "allow"        # Very noisy, too subjective
doc_markdown = "allow"              # Backticks in docs - low value for effort
similar_names = "allow"             # Often false positives
too_many_lines = "allow"            # Subjective function length
module_name_repetitions = "allow"   # FooModule::Foo patterns are common and fine
struct_excessive_bools = "allow"    # Sometimes structs legitimately need multiple bools
fn_params_excessive_bools = "allow" # Sometimes functions legitimately need multiple bools
items_after_statements = "allow"    # Style preference, not harmful
uninlined_format_args = "allow"     # format!("{}", x) vs format!("{x}") is minor
return_self_not_must_use = "allow"  # Builder pattern returns

# Cast lints - many false positives in contexts where values are known to be in range
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
# Note: cast_lossless is NOT allowed - prefer From::from() for clarity
# Default::default() vs TypeName::default() is a style preference
default_trait_access = "allow"
# Sometimes separate match arms are clearer even if bodies are identical
match_same_arms = "allow"
# Some async functions don't await but are async for API consistency or future use
unused_async = "allow"
# let...else is new syntax, current style is fine
manual_let_else = "allow"
# Used underscore bindings are sometimes intentional for documentation
used_underscore_binding = "allow"
# &Option<T> vs Option<&T> - sometimes &Option is intentional
ref_option_ref = "allow"
ref_option = "allow"
# Appending format! to String - push_str with format is equivalent
format_push_string = "allow"
# Case-sensitive extension comparison is often intentional
case_sensitive_file_extension_comparisons = "allow"
# Unnecessary wrapping in Result - sometimes for API consistency
unnecessary_wraps = "allow"
# Passing by value when not consumed - often cleaner API design
needless_pass_by_value = "allow"
# Small Copy types by reference - often for API consistency
trivially_copy_pass_by_ref = "allow"
# Underscore-prefixed bindings - used for documentation or future use
no_effect_underscore_binding = "allow"
# Closure vs method reference - closure syntax is clearer: .map(|s| s.to_string())
redundant_closure_for_method_calls = "allow"

# Panic safety - deny any operations that could panic
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Note: indexing_slicing lint is too strict and flags many safe uses
# Instead, we rely on careful code review and bounds checking

# Prohibit all allow attributes - no exceptions
allow_attributes = "deny"

# Allow large error types - error types need rich context for good UX
result_large_err = "allow"

# No debug macros in production code
dbg_macro = "deny"

# No incomplete code markers
todo = "deny"
unimplemented = "deny"

# Use tracing instead of println/eprintln in library code
# CLI crates override this via #![allow(...)] in lib.rs/main.rs
print_stdout = "deny"
print_stderr = "deny"

# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
# local crates
fastwebsockets = { path = "crates/fastwebsockets", package = "hpx-fastwebsockets", version = "1.4.0" }
hpx = { path = "crates/hpx", version = "1.4.0" }
hpx-yawc = { path = "crates/yawc", version = "1.4.0" }

# external crates
ahash = "0.8.12"
arc-swap = "1.8.1"
assert2 = "0.3.4"
async-trait = "0.1.80"
axum = "0.8.8"
axum-core = "0.5.6"
base64 = "0.22.1"
boring = "5.0.1"
brotli = "8.0.2"
bytes = "1.11.1"
bytes-utils = "0.1.4"
cookie = "0.18.1"
criterion = "0.8.2"
encoding_rs = "0.8.35"
eyre = "0.6.12"
flate2 = "1.1.9"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
hickory-resolver = "0.25.2"
hmac = "0.12.1"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
http2 = "0.5.12"
httparse = "1.10.1"
hyper = "1.8.1"
hyper-util = "0.1.20"
ipnet = "2.11.0"
libc = "0.2.182"
memchr = "2.8.0"
mime = "0.3.17"
mime_guess = "2.0.5"
nom = "8.0.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
parking_lot = "0.12.3"
percent-encoding = "2.3.2"
pin-project = "1.1.10"
pin-project-lite = "0.2.16"
pretty_env_logger = "0.5.0"
rand = "0.10.0"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.14.0"
scc = "3.6.1"
schnellru = "0.2.4"
serde = "1.0.228"
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
simd-json = "0.17.0"
simdutf8 = "0.1.5"
smallvec = "1.15.1"
socket2 = "0.6.2"
strum = "0.27.2"
strum_macros = "0.27.2"
sync_wrapper = "1.0.2"
system-configuration = "0.7.0"
tempfile = "3.25.0"
thiserror = "2.0.18"
tokio = "1.49.0"
tokio-boring = "5.0.0"
tokio-rustls = "0.26"
tokio-socks = "0.5.2"
tokio-test = "0.4.5"
tokio-util = "0.7.18"
tower = "0.5.3"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
trybuild = "1.0.116"
typed-builder = "0.23.2"
ulid = "1"
url = "2.5.8"
utf-8 = "0.7.6"
want = "0.3.1"
webpki-root-certs = "1.0.6"
webpki-roots = "1.0.6"
windows-registry = "0.6.1"
zstd = "0.13.3"

# WASM dependencies
getrandom = "=0.2"
js-sys = "0.3.85"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
wasm-bindgen-test = "0.3.58"
web-sys = { version = "0.3.85", default-features = false }

# Additional async/runtime dependencies
smol = "2.0.2"
tokio-stream = { version = "0.1.18", features = ["sync"] }

# TLS dependencies
futures-rustls = "0.26"
rustls-native-certs = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
