[package]
name = "hpx-browser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
v8 = ["dep:deno_core", "dep:deno_error"]
canvas = ["dep:skia-safe", "dep:png", "dep:image", "dep:fontdb", "dep:rustybuzz", "dep:swash", "dep:rustfft"]
quic = ["dep:quinn", "dep:h3", "dep:h3-quinn"]
cdp = ["dep:tokio-tungstenite"]
workers = ["v8"]
blocker = []
proptest = ["dep:proptest"]

[dependencies]
# always-on
hpx = { workspace = true }
html5ever = { workspace = true }
taffy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
httparse = { workspace = true }
futures-util = { workspace = true }
percent-encoding = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
once_cell = { workspace = true }
scc = { workspace = true }
winnow = { workspace = true }
arc-swap = { workspace = true }
compact_str = { workspace = true }

# v8 feature
deno_core = { workspace = true, optional = true }
deno_error = { workspace = true, optional = true }

# canvas feature
skia-safe = { workspace = true, optional = true }
png = { workspace = true, optional = true }
image = { workspace = true, optional = true }
fontdb = { workspace = true, optional = true }
rustybuzz = { workspace = true, optional = true }
swash = { workspace = true, optional = true }
rustfft = { workspace = true, optional = true }

# quic feature
quinn = { workspace = true, optional = true }
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }

# cdp feature
tokio-tungstenite = { workspace = true, optional = true }

# property testing
proptest = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "page_throughput"
harness = false

[[bench]]
name = "challenge_detection"
harness = false

[[bench]]
name = "tls_handshake"
harness = false

[lints]
workspace = true
