[package]
name = "hpx-browser"
description = "Headless browser engine for hpx: HTML parsing, rendering, CDP, and canvas support"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
blocker = []
canvas = [
    "dep:skia-safe",
    "dep:png",
    "dep:image",
    "dep:fontdb",
    "dep:rustybuzz",
    "dep:swash",
    "dep:rustfft",
]
cdp = ["dep:hpx-yawc", "dep:hyper", "dep:hyper-util", "hpx-yawc/axum"]
proptest = ["dep:proptest"]
v8 = ["dep:deno_core"]
workers = ["v8"]

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
blitz-dom = { workspace = true }
blitz-html = { workspace = true }
blitz-traits = { workspace = true }
chrono = { workspace = true }
deno_core = { workspace = true, optional = true }
fontdb = { workspace = true, optional = true }
futures-util = { workspace = true }
hpx = { workspace = true }
hpx-yawc = { workspace = true, optional = true }
hyper = { workspace = true, features = ["server", "http1"], optional = true }
hyper-util = { workspace = true, features = [
    "tokio",
    "server-auto",
], optional = true }
image = { workspace = true, optional = true }
parley = { workspace = true }
png = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
rustfft = { workspace = true, optional = true }
rustybuzz = { workspace = true, optional = true }
scc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
skia-safe = { workspace = true, optional = true }
swash = { workspace = true, optional = true }
taffy = { workspace = true, features = ["std", "flexbox", "grid", "block_layout", "content_size", "calc", "detailed_layout_info", "float_layout", "taffy_tree"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "page_throughput"
harness = false

[[bench]]
name = "challenge_detection"
harness = false

[[bench]]
name = "tls_handshake"
harness = false

[lints]
workspace = true
