[package]
name = "hpx-cli"
version.workspace = true
description = "CLI for hpx — High Performance HTTP Client"
keywords = ["http", "client", "cli"]
categories = ["command-line-utilities", "web-programming::http-client"]
repository = "https://github.com/longcipher/hpx"
authors = ["Akagi201 <akagi201@gmail.com>"]
license.workspace = true
edition.workspace = true

[[bin]]
name = "hpx"
path = "src/main.rs"

[features]
default = ["http1", "http2", "rustls-tls"]
http1 = ["hpx/http1"]
http2 = ["hpx/http2"]
http3 = ["hpx/http3"]
boring = ["hpx/boring", "dep:hpx-util"]
rustls-tls = ["hpx/rustls-tls"]

[dependencies]
clap = { workspace = true }
hpx = { workspace = true }
hpx-util = { workspace = true, features = ["emulation"], optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }